got some shit, rendered stars and ship, then set up gravity pull when space bar pressed, but i dont like how the stars stay stationary!!! 9/23/21

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,5 +8,6 @@ dependencies {
 	api "com.github.MrStahlfelge.gdx-websockets:serialization:$websocketSerializationVersion"
 	api "com.github.MrStahlfelge.gdx-websockets:core:$websocketVersion"
 	api "com.github.tommyettinger:formic:$formicVersion"
+	api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
 	api project(':shared')
 }
